Substacking (#7)
* Import Thoth, adapt (heavily) to Sentinel.  First skeleton + muscle

* whoops

* adapt to --enable-preview

* moar fretting

* Start on sentinel spatial pub/sub

* Icarus. Flying too close to numerical instability?

Using leftOfPlaneFast for the larger subset of usages, keeping exact for
OrientedFace predicate use.

Seems to work really really well.

* Icarus.

Use leftOfPlaneFast.  5ms construction for 1024 points

* move sentinel functionality to lucien. split out read only functionality

* geebus

* another rename cleanup

* use graalvm action cache?

* Various and sundry

* clean

* add Oriented - Location + Orientation

* Use Rotor instead of Quaternion

Nice!

* beef up

* cleanup

* moar cleanup

* Add polyhedra framework

* add ye olde thyme cubic grid from inviscid

* better mouse handling

* abstract out common 3D viewer app structure

* geometry viewer skeleton

* some cleanup

* le sigh. triangulate mesh first ;)

* Flesh out for exploring

* moar waxing. eventually will need a framework and some CnC ui here

* some more refactoring, added IvmGrid for IVM grids

* heh. rotor for orientation, not the vector.  d'oh