@@ -37,8 +37,8 @@
         <module>grpc</module>
         <module>lucien</module>
         <module>e2e-test</module>
-        <module>sentinel</module>
         <module>portal</module>
+        <module>common</module>
     </modules>
 
     <dependencyManagement>
@@ -46,7 +46,7 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <version>${project.version}</version>
-                <artifactId>sentinel</artifactId>
+                <artifactId>common</artifactId>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
@@ -172,6 +172,29 @@
                 <version>${javafx.version}</version>
             </dependency>
 
+            <!-- JOGL-->
+        <dependency>
+            <groupId>org.jogamp.gluegen</groupId>
+            <artifactId>gluegen-rt-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jogamp.jogl</groupId>
+            <artifactId>jogl-all-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jogamp.jocl</groupId>
+            <artifactId>jocl-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jogamp.joal</groupId>
+            <artifactId>joal-main</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
+
             <!-- Test Only Dependencies Below This Line-->
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
@@ -214,6 +237,7 @@
                             <value>logging.properties</value>
                         </property>
                     </systemProperties>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -221,6 +245,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <release>20</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -381,6 +408,12 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+        </repository>
+        <repository>
+            <id>jogamp-remote</id>
+            <name>jogamp test mirror</name>
+            <url>https://www.jogamp.org/deployment/maven/</url>
+            <layout>default</layout>
         </repository>
     </repositories>
 
